# mroll

./: .gitignore  Makefile  README..md  README.md  pyproject.toml
.github/workflows/: ci-workflow.yml
mdb/: commands.py
mdb/templates/: env.py  mdb.ini  revision_template.txt
mroll/: commands.py  config.py  exceptions.py  migration.py
mroll/databases/: __init__.py  mdb.py  monetdb.py
mroll/templates/: env.py  mroll.ini
tests/: __init__.py  test_ad_hoc.py  test_commands.py  test_mdb.py  test_migration_context.py  test_revison.py  test_utils.py
tests/data/: mroll.ini
tests/data/versions/: 6c163e323a89_test_revision_0.sql
