[tool.poetry]
name = "mroll"
version = "0.1.0"
description = "monetdb migration tool"
authors = ["svetlin <svetlin.stalinov@monetdbsolutions.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pymonetdb = "^1.3.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
