[tool.poetry]
name = "mroll"
version = "0.3.3"
description = "monetdb migration tool"
license = "MPL-2.0"
readme = "README.md"
authors = ["svetlin <svetlin.stalinov@monetdbsolutions.com>"]
repository = "https://github.com/MonetDBSolutions/mroll"

keywords = ["migration", "monetdb", "mroll"]

classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Topic :: Database"
]

[tool.poetry.scripts]
mroll = "mroll.commands:cli"

[tool.poetry.dependencies]
python = "^3.7"
pymonetdb = "^1.3.1"
click = "^7.1.2"
sqlparse = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
